force-app/main/default/objects/HttpStatus__mdt/HttpStatus__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type generated from CSV: C:\Users\aleksandr.novikov\CMDT_Tools\httpStatus.csv</description>
    <label>HttpStatus</label>
    <pluralLabel>HttpStatuss</pluralLabel>
</CustomObject>