force-app/main/default/objects/HttpStatus__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>