force-app/main/default/objects/HttpStatus__mdt/fields/IsAllowCode__c.field-meta.xml
<CustomField>
    <fullName>IsAllowCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllowCode</label>
    <type>Checkbox</type>
</CustomField>