force-app/main/default/objects/HttpStatus__mdt/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>