force-app/main/default/objects/HttpStatus__mdt/fields/Status__c.field-meta.xml
<CustomField xmlns='http://soap.sforce.com/2006/04/metadata'>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>255</length>
</CustomField>